# ChangeLog for app-admin/wasabi
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/wasabi/ChangeLog,v 1.10 2004/06/24 21:42:13 agriffis Exp $

*wasabi-0.2.1-r1 (24 Jun 2004)

  24 Jun 2004; Kurt Lieber <klieber@gentoo.org> wasabi-0.2.1-r1.ebuild:
  revision bump

*wasabi-0.2.1 (23 Jun 2004)

  23 Jun 2004; Kurt Lieber <klieber@gentoo.org> wasabi-0.2.1.ebuild:
  version bump to 0.2.1

*wasabi-0.2 (21 Jun 2004)

  21 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> +wasabi-0.2.ebuild:
  Version bump for lcars

  18 Jun 2004; David Holm <dholm@gentoo.org> wasabi-0.1-r1.ebuild:
  Added to ~ppc, again. What happened to the keywords??

*wasabi-0.1-r1 (17 Jun 2004)

  17 Jun 2004; Grant Goodyear <g2boojum@gentoo.org> files/wasabi.init,
  +wasabi-0.1-r1.ebuild, -wasabi-0.1.ebuild:
  It seems that the init file kills all perl processes when shutdown.
  Added new version from lcars.

  16 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> wasabi-0.1.ebuild:
  Added ~sparc

  08 Jun 2004; David Holm <dholm@gentoo.org> wasabi-0.1.ebuild:
  Added to ~ppc.

  06 Jun 2004; Grant Goodyear <g2boojum@gentoo.org> wasabi-0.1.ebuild:
  Fixed SRC_URI to use mirror://gentoo.  Closes bug # 53163; thanks ciaranm!

*wasabi-0.1 (05 Jun 2004)

  05 Jun 2004; Grant Goodyear <g2boojum@gentoo.org> +files/wasabi.init,
  +wasabi-0.1.ebuild:
  New package
