@@ -1,10 +1,13 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/wasabi/wasabi-0.2.1-r1.ebuild,v 1.2 2004/06/24 21:42:13 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/wasabi/wasabi-0.2.1-r1.ebuild,v 1.3 2004/06/29 19:51:44 agriffis Exp $
+
+inherit eutils
 
 DESCRIPTION="Log parsing and notification program"
 HOMEPAGE="http://www.gentoo.org/~lcars/wasabi"
 SRC_URI="http://www.gentoo.org/~lcars/wasabi/${P}.tar.gz"
+DEPEND=">=sys-apps/sed-4"
 
 LICENSE="GPL-2"
 SLOT="0"
