@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/wasabi
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/wasabi/ChangeLog,v 1.10 2004/06/24 21:42:13 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/wasabi/ChangeLog,v 1.11 2004/06/29 19:51:44 agriffis Exp $
+
+  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> wasabi-0.2.1-r1.ebuild,
+  wasabi-0.2.1.ebuild:
+  inherit eutils, add sed-4 dep
 
 *wasabi-0.2.1-r1 (24 Jun 2004)
 
